--- a/test/index.html
+++ b/test/index.html
@@ -19,9 +19,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
 
+    <!-- test helper -->
     <script src='./testhelper.js'></script>
-    <script src='./graphics/canvas.js'></script>
-
   </head>
   <body>
     <app></app>
@@ -102,23 +101,45 @@
     a.mdl-navigation__link(href='{link}', target='preview') {name}
 </script>
 
+<!--
+    <script src='./graphics/canvas.js'></script>
+  -->
+
 <script>
-  var data = th.toJSON('templates/simple.html?{link}');
 
-  data.unshift({
-    name: 'core',
-    items: [
-      {name:'object',},
-      {name:'number',},
-      {name:'string',},
-      {name:'array',},
-      {name:'function',},
-      {name:'date',},
-      {name:'math',},
-    ],
+  var data = {
+    sections: [{
+      name: 'core',
+      items: [
+        {name:'object',},
+        {name:'number',},
+        {name:'string',},
+        {name:'array',},
+        {name:'function',},
+        {name:'date',},
+        {name:'math',},
+      ],
+    }],
+  };
+
+  th.load('config.json', function(d) {
+    var files = [];
+    d.files.each(function(file) {
+      files.push(file);
+    });
+
+    th.loadScripts(files, function() {
+      // // マウントする
+      var json = th.toJSON('templates/simple.html?{link}');
+
+      json.forEach(function(s) {
+        data.sections.push(s);
+      });
+
+      riot.update();
+    });
   });
 
-  riot.mount('app', {
-    sections: data,
-  });
+  riot.mount('app', data);
+
 </script>
