--- a/test/index.html
+++ b/test/index.html
@@ -128,9 +128,8 @@
 
         if (matchedItems.length > 0) {
           document.querySelector('#preview').src = matchedItems[0].link;
-          s.flag = true;
+          s.open = true;
         }
-
       });
 
       riot.update();
