fix ticker test

--- a/test/common/index.html
+++ b/test/common/index.html
@@ -32,3 +32,5 @@
 </html>
 
 <script src='src/core/object.js'></script>
+<script src='src/util/index.js'></script>
+<script src='src/app/index.js'></script>
