--- a/examples/touchgame.html
+++ b/examples/touchgame.html
@@ -32,6 +32,11 @@ phina.define("MainScene", {
       height: SCREEN_HEIGHT,
     });
 
+    this.group = CanvasElement().addChildTo(this);
+    this.group.x = 100;
+    this.group.y = 100;
+    // this.group.rotation = 15;
+
     var gridX = Grid({
       width: SCREEN_WIDTH,
       columns: 9,
@@ -44,7 +49,7 @@ phina.define("MainScene", {
     var self = this;
     (8).times(function(yIndex) {
       (8).times(function(xIndex) {
-        var rect = Shape().addChildTo(self);
+        var rect = Shape().addChildTo(self.group);
         rect.fillStyle = 'red';
 
         rect.x = gridX.span(xIndex+1);
@@ -53,7 +58,7 @@ phina.define("MainScene", {
 
         rect.update = function(app) {
           var p = app.pointer;
-          if (this.left < p.x && p.x < this.right) {
+          if (this.hitTest2(p.x, p.y)) {
             this.fillStyle = 'blue';
           }
           else {
