--- a/test/game2/index.html
+++ b/test/game2/index.html
@@ -9,18 +9,26 @@
     <title>test - phina.js</title>
     <meta name="description" content="${description}" />
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jade/1.3.1/jade.js"></script>
-    <script src="http://rawgit.com/phi-jp/riot/build/dist/riot/riot+compiler.js"></script>
-    <script src="http://cdn.rawgit.com/phi-jp/high/0.0.3/high.js"></script>
-
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <!-- materialize -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css' />
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js'></script>
 
+    <!-- jade -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jade/1.3.1/jade.js"></script>
+    <!-- riot -->
+    <script src="http://rawgit.com/phi-jp/riot/build/dist/riot/riot+compiler.js"></script>
+    <!-- high -->
+    <script src="http://cdn.rawgit.com/phi-jp/high/0.0.3/high.js"></script>
     <!-- jframe -->
     <script src='http://cdn.rawgit.com/phi-jp/jframe/0.0.1/jframe.js'></script>
 
     <!-- test helper -->
     <script src='./../game/testhelper.js'></script>
+
+    <!-- test files -->
+    <script src='./../game/src/display/index.js'></script>
   </head>
   <body>
     <app></app>
@@ -29,118 +37,80 @@
 
 <script type='riot/tag' template='jade'>
   app
-    div.
-      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
-                  mdl-layout--overlay-drawer-button">
-        <phina-nav sections='{this.sections}'></phina-nav>
-        <phina-main></phina-main>
-      </div>
-    script(type='text/javascript').
-      this.sections = opts.sections;
+    side
 </script>
 
 <script type='riot/tag' template='jade'>
-  phina-nav.mdl-layout__drawer
-    span.mdl-layout-title phina.js
-    nav.mdl-navigation
-      div.mdl-navigation__link
-        search(oninput='{search}')
-      itemgroup(each='{sections.filter(filter)}', data='{this}')
+  side
+    nav
+      ul#mobile-nav.side-nav.fixed
+        li.search
+          div.input-field
+            input#search(type='search')
+            label
+              i.mdi-action-search
+            i.mdi-navigation-close
+        li(each='{sections}')
+          a(href='') {name}
+      a.button-collapse(href='', data-activates="mobile-nav")
+        i.mdi-navigation-menu
+
     style.
-      div.mdl-navigation__link {
-        padding: 0px 10px !important;
+      side {
+        display: block;
+      }
+      side nav ul li.search {
+        padding-left: 0px;
+        padding-right: 0px;
+        background-color: hsl(0, 100%, 70%);
+      }
+      side nav ul li.search i.mdi-action-search {
+        font-size: 2rem;
       }
 
-    script(type='text/javascript').
-      this.sections = opts.sections;
-
-      var searchValue = '';
-
-      this.search = function(event) {
-        searchValue = event.target.value;
-        this.update();
-      };
-      this.filter = function(item) {
-        if (searchValue) {
-          var flag = item.name.indexOf(searchValue);
-          return flag !== -1;
-        }
-        else {
-          return true;
-        }
-      };
-</script>
-
-<script type='riot/tag' template='jade'>
-  phina-main.mdl-layout__content
-    div.page-content
-      div#preview(name='preview')
-    style.
-      phina-main, phina-main div.page-content, phina-main div.page-content #prev iframe {
-        height: 100%;
-      }
-      #preview {
-        height: 100%;
-      }
-      #preview iframe {
-        height: 100%;
-      }
     script.
-      this.on('mount', function() {
-        window.preview = jframe("#preview");
-      });
+      this.sections = window.sections;
+
 </script>
+
 
 <script>
-  riot.compile(function() {
-    componentHandler.upgradeDom();
-  });
-
   var hash = location.hash.substr(1);
   var data = {
     sections: [],
   };
 
-  th.load('config.json', function(d) {
-    var files = [];
-    d.files.each(function(file) {
-      files.push(file);
+  // // マウントする
+  var json = th.toJSON('');
+  console.log(json);
+  window.sections = json;
+
+  json.forEach(function(s) {
+    data.sections.push(s);
+
+    var matchedItems = s.items.filter(function(item) {
+      return item.path === hash;
     });
 
-    th.loadScripts(files, function() {
-      // // マウントする
-      var json = th.toJSON('templates/simple.html?{link}');
+    if (matchedItems.length > 0) {
+      var code = (function() {
+        var code = th.code(matchedItems[0].path);
+        var lines = code.split('\n');
+        lines.splice(0, 1);
+        lines.splice(lines.length-1, 1);
+        return lines.join('\n');
+      })();
 
-      json.forEach(function(s) {
-        data.sections.push(s);
-
-        var matchedItems = s.items.filter(function(item) {
-          return item.path === hash;
-        });
-
-        if (matchedItems.length > 0) {
-          var code = (function() {
-            var code = th.code(matchedItems[0].path);
-            var lines = code.split('\n');
-            lines.splice(0, 1);
-            lines.splice(lines.length-1, 1);
-            return lines.join('\n');
-          })();
-
-          var a = $.ajax({
-            url: 'templates/display.html',
-          });
-          a.done(function(res) {
-            var html = res.replace('{{code}}', code);
-            preview.load(html);
-          });
-
-          s.open = true;
-        }
+      var a = $.ajax({
+        url: 'templates/display.html',
+      });
+      a.done(function(res) {
+        var html = res.replace('{{code}}', code);
+        preview.load(html);
       });
 
-      riot.update();
-    });
+      s.open = true;
+    }
   });
 
   riot.mount('app', data);
